fixed header and footer cropping

--- a/apps/website/src/app/landing-page/landing-page.component.scss
+++ b/apps/website/src/app/landing-page/landing-page.component.scss
@@ -1,7 +1,3 @@
-.landing-page-container {
-  flex: 1 1 auto;
-}
-
 .intro-header {
   text-transform: uppercase;
 }
