--- a/apps/website/src/app/main-layout/footer/footer.component.scss
+++ b/apps/website/src/app/main-layout/footer/footer.component.scss
@@ -1,3 +1,4 @@
+@use '../../../assets/styles/sizing';
 @use '../../../assets/styles/themes';
 
 .toolbar-footer div {
@@ -6,6 +7,8 @@
 
 #footer {
   width: 100%;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 
 /*#region Footer */
